--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,12 @@
         android:layout_height="0dp"
         android:src="@drawable/tt"
         android:scaleType="centerCrop" />
+    <ImageView
+        android:id="@+id/imageViewFive"
+        android:layout_weight="0.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:src="@drawable/tt"
+        android:scaleType="centerCrop" />
 
 </LinearLayout>
