--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -69,10 +69,11 @@
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_250">250dp</dimen>
     <dimen name="dp_300">300dp</dimen>
+    <dimen name="dp_330">330dp</dimen>
     <dimen name="dp_360">360dp</dimen>
     <dimen name="dp_400">400dp</dimen>
     <dimen name="dp_450">450dp</dimen>
-
+    <dimen name="dp_2000">2000dp</dimen>
 
     <dimen name="sp_9">9sp</dimen>
     <dimen name="sp_10">10sp</dimen>
