页面效果4.0----view可以手动移动，自动移动待实现。

--- a/app/src/main/res/layout/activity_dh.xml
+++ b/app/src/main/res/layout/activity_dh.xml
@@ -6,8 +6,8 @@
     <Button
         android:id="@+id/btn_move"
         android:layout_gravity="center"
-        android:text="yidong"
-        android:layout_width="@dimen/dp_80"
+        android:text="点击展示隐身缩小动画效果"
+        android:layout_width="@dimen/dp_200"
         android:layout_height="@dimen/dp_45" />
 
     <ImageView
