--- a/app/src/main/res/layout/activity_handler_four.xml
+++ b/app/src/main/res/layout/activity_handler_four.xml
@@ -8,10 +8,10 @@
     tools:context="com.fpp.status.activity.handler.HandlerFourActivity">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginTop="@dimen/dp_23"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="55dp">
         <Button
             android:id="@+id/btn_one_one"
             android:text="one"
@@ -20,7 +20,7 @@
             android:layout_height="@dimen/dp_55" />
         <Button
             android:id="@+id/btn_one_two"
-            android:text="one"
+            android:text="two"
             android:padding="@dimen/dp_5"
             android:layout_width="@dimen/dp_55"
             android:layout_height="@dimen/dp_55" />
