--- a/app/src/main/res/layout/activity_move_four.xml
+++ b/app/src/main/res/layout/activity_move_four.xml
@@ -4,15 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fpp.status.activity.handler.MHandlerTwoActivity">
-
-    <TextView
-        android:id="@+id/text0"
-        android:gravity="center"
-        android:text="aaaaaaaaaaa"
-        android:layout_width="368dp"
-        android:layout_height="45dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp" />
+    tools:context="com.fpp.status.activity.move.MoveFourActivity">
 
 </android.support.constraint.ConstraintLayout>
