--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:padding="@dimen/dp_5"
-            android:text="one" />
+            android:text="测试版本" />
 
         <Button
             android:id="@+id/btn_one_three"
@@ -193,7 +193,7 @@
             android:layout_weight="0.5"
             android:background="#00ffff"
             android:scaleType="centerCrop"
-            android:text="控件移动" />
+            android:text="版本5.0" />
 
         <Button
             android:id="@+id/btn_three_five"
@@ -237,6 +237,85 @@
         android:background="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_5"/>
+    <LinearLayout
+        android:layout_marginBottom="@dimen/dp_5"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_55">
+
+        <Button
+            android:id="@+id/btn_four_one"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#aaff00"
+            android:text="fragment" />
+
+        <Button
+            android:id="@+id/btn_four_two"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ffff00"
+            android:scaleType="centerCrop"
+            android:text="侧滑菜单" />
+
+        <Button
+            android:id="@+id/btn_four_three"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ffffff"
+            android:scaleType="centerCrop"
+            android:text="动画" />
+
+        <Button
+            android:id="@+id/btn_four_four"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ff00ff"
+            android:scaleType="centerCrop"
+            android:text="控件移动" />
+
+        <Button
+            android:id="@+id/btn_four_five"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ffaaaa"
+            android:scaleType="centerCrop"
+            android:text="版本1.0" />
+
+        <Button
+            android:id="@+id/btn_four_six"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ccffff"
+            android:scaleType="centerCrop"
+            android:text="版本2.0" />
+
+        <Button
+            android:id="@+id/btn_four_seven"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ffcccc"
+            android:scaleType="centerCrop"
+            android:text="自定义移动控件" />
+
+        <Button
+            android:id="@+id/btn_four_eight"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#00ffff"
+            android:scaleType="centerCrop"
+            android:text="自定义view研究" />
+
+
+    </LinearLayout>
     <View
         android:background="@color/colorAccent"
         android:layout_width="match_parent"
