--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -320,6 +320,87 @@
         android:background="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_5"/>
+    <LinearLayout
+        android:layout_marginBottom="@dimen/dp_5"
+        android:layout_marginTop="@dimen/dp_5"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_55">
+
+        <Button
+            android:id="@+id/btn_five_one"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#aaff00"
+            android:scaleType="centerCrop"
+            android:text="fragment" />
+
+        <Button
+            android:id="@+id/btn_five_two"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ffffff"
+            android:scaleType="centerCrop"
+            android:text="版本3.0" />
+
+        <Button
+            android:id="@+id/btn_five_three"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ffff00"
+            android:scaleType="centerCrop"
+            android:text="版本4.0" />
+
+        <Button
+            android:id="@+id/btn_five_four"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#00ffff"
+            android:scaleType="centerCrop"
+            android:text="版本5.0" />
+
+        <Button
+            android:id="@+id/btn_five_five"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#aa95ff"
+            android:scaleType="centerCrop"
+            android:text="项目历史版本" />
+
+        <Button
+            android:id="@+id/btn_five_six"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ff00ff"
+            android:scaleType="centerCrop"
+            android:text="项目测试" />
+
+        <Button
+            android:id="@+id/btn_five_seven"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#ffaaaa"
+            android:scaleType="centerCrop"
+            android:text="自定义移动控件" />
+
+        <Button
+            android:id="@+id/btn_five_eight"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="#0055aa"
+            android:scaleType="centerCrop"
+            android:text="自定义view研究" />
+
+
+    </LinearLayout>
     <View
         android:background="@color/colorAccent"
         android:layout_width="match_parent"
