--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -57,6 +57,7 @@
     <dimen name="dp_140">140dp</dimen>
     <dimen name="dp_150">150dp</dimen>
     <dimen name="dp_151">151dp</dimen>
+    <dimen name="dp_155">155dp</dimen>
     <dimen name="dp_160">160dp</dimen>
     <dimen name="dp_162">162dp</dimen>
     <dimen name="dp_170">170dp</dimen>
