tablayout配合viewpager、fragment实现界面滑动。

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,9 @@
         <item name="android:height">35dp</item>
     </style>
 
+    <style name="TabLayoutTextStyle">
+        <item name="android:textSize">12sp</item>
+        <!--<item name="android:textSize">@dimen/text_16_sp</item>-->
+    </style>
+
 </resources>
