--- a/app/src/main/res/layout/activity_billing_select.xml
+++ b/app/src/main/res/layout/activity_billing_select.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-<!--
-    &lt;!&ndash;主页面&ndash;&gt;
+    <!--主页面-->
     <RelativeLayout
         android:id="@+id/rl_atvt_main_content"
+        android:background="@color/leftMenuWorkNameTextColor"
         android:clipChildren="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
 
-        &lt;!&ndash;下层-标题栏    克里姆林宫&ndash;&gt;
+        <!--下层-标题栏    克里姆林宫-->
         <LinearLayout
             android:id="@+id/ll_atvt_main_title"
             android:layout_width="match_parent"
@@ -25,25 +25,23 @@
                 android:layout_width="@dimen/dp_30"
                 android:layout_height="@dimen/dp_30"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/dp_15"
-                android:src="@drawable/main_left_top_page" />
+                android:layout_marginLeft="@dimen/dp_15"/>
 
             <TextView
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="克里姆林宫"
+                android:text="一键下单"
                 android:textColor="@color/white" />
 
             <ImageView
                 android:layout_width="@dimen/dp_30"
                 android:layout_height="@dimen/dp_30"
                 android:layout_gravity="center"
-                android:layout_marginRight="@dimen/dp_15"
-                android:src="@drawable/main_right_top_qr_code" />
+                android:layout_marginRight="@dimen/dp_15"/>
         </LinearLayout>
-        &lt;!&ndash;下层-图片栏&ndash;&gt;
+        <!--下层-图片栏-->
         <LinearLayout
             android:id="@+id/ll_atvt_main_iv"
             android:background="@drawable/main_bg"
@@ -60,53 +58,154 @@
 
             </RelativeLayout>
         </LinearLayout>
-        &lt;!&ndash;下层-空白 &ndash;&gt;
+        <!--下层-空白 -->
         <LinearLayout
             android:id="@+id/ll_atvt_main_black"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="150dp"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_2000"
-            android:background="#ffaaff"
+            android:background="#F9F9F9"
             android:orientation="vertical">
 
         </LinearLayout>
 
-        &lt;!&ndash;上层    &ndash;&gt;
+        <!--上层    -->
         <LinearLayout
             android:id="@+id/ll_atvt_main_superstratum"
             android:layout_marginLeft="@dimen/dp_15"
             android:layout_marginRight="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_150"
+            android:layout_marginTop="@dimen/dp_105"
             android:orientation="vertical"
-            android:background="@color/colorPrimaryDark"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_2000">
+            <!--会员信息-->
+            <RelativeLayout
+                android:background="#ffffff"
+                android:layout_width="match_parent"
+                android:layout_height="180dp">
+                <TextView
+                    android:padding="10dp"
+                    android:text="白宫"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView2" />
+                <ImageView
+                    android:background="#72394c"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:id="@+id/imageView3"
+                    android:layout_marginTop="15dp"
+                    android:layout_centerHorizontal="true" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_above="@+id/linearLayout2"
+                    android:layout_alignParentStart="true">
+                    <TextView
+                        android:background="#00ffff"
+                        android:layout_width="match_parent"
+                        android:layout_height="10dp"
+                        android:id="@+id/view"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentStart="true" />
+                    <LinearLayout
+                        android:background="#72394c"
+                        android:layout_width="200dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true">
+                    </LinearLayout>
+                </RelativeLayout>
 
+
+                <RelativeLayout
+                    android:orientation="horizontal"
+                    android:background="#ff0000"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:id="@+id/linearLayout2"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true">
+                    <TextView
+                        android:text="刘涛"
+                        android:gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentBottom="true"
+                        android:id="@+id/textView5" />
+                    <TextView
+                        android:text="金牌会员"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/textView5"
+                        android:layout_alignBottom="@+id/textView5"
+                        android:layout_toEndOf="@+id/textView5" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+            <!--散客开单及以下-->
+            <LinearLayout
+                android:background="#f9f9f9"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!--散客开单-->
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp">
+
+                </LinearLayout>
+                <!--手机号输入项-->
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp">
+                    <ImageView
+                        android:background="#f2f2f2"
+                        android:layout_width="60dp"
+                        android:layout_height="match_parent" />
+                    <EditText
+
+                        android:layout_weight="1"
+                        android:layout_width="@dimen/dp_0"
+                        android:layout_height="match_parent" />
+                    <ImageView
+                        android:background="#f2f2f2"
+                        android:layout_width="60dp"
+                        android:layout_height="match_parent" />
+
+                </LinearLayout>
+                <!--开单选项-->
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp">
+                    <TextView
+                        android:background="#72394c"
+                        android:layout_weight="0.5"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" />
+                    <TextView
+                        android:background="@color/leftMenuWorkNameTextColor"
+                        android:layout_weight="0.5"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
 
 
 
-    </RelativeLayout>-->
+    </RelativeLayout>
 
 
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/id_tablayout"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        app:tabGravity="fill"
-        android:background="#ffffff"
-        app:tabIndicatorColor="#FF0000"
-        app:tabMode="scrollable"
-        app:tabTextAppearance="@style/TabLayoutTextStyle"
-        app:tabSelectedTextColor="#FF0000"
-        app:tabTextColor="#000000"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
