--- a/app/src/main/res/layout/view_pager_item_four_three_iv.xml
+++ b/app/src/main/res/layout/view_pager_item_four_three_iv.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
     <ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/vp_iv"
+        android:id="@+id/ll_iv"
+        android:layout_margin="10dp"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_gravity="center"
         android:background="#ff0000" />
+</LinearLayout>
     <!--会员信息-->
 
     <!--<LinearLayout
