--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,6 @@
 
     <!-- 侧滑菜单职称字体颜色 -->
     <color name="leftMenuWorkNameTextColor">#d3aa50</color>
+
+    <color name="colorWhite">#ffffff</color>
 </resources>
