--- a/app/src/main/res/layout/activity_fragment_seven.xml
+++ b/app/src/main/res/layout/activity_fragment_seven.xml
@@ -1,13 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/mylistview"
+    <!--服务单详情标题栏-->
+    <include layout="@layout/title_activity" />
+
+
+    <!--内容-->
+    <!--<ScrollView
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-         >
-     </com.handmark.pulltorefresh.library.PullToRefreshListView>
+        android:layout_height="0dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            &lt;!&ndash;设计师&ndash;&gt;
+            <TextView
+                android:id="@+id/tv_atvt_select_waiter_stylist"
+                android:padding="@dimen/dp_10"
+                android:textSize="@dimen/order_main_body_text_size"
+                android:text="设计师"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <ListView
+                android:id="@+id/lv_atvt_select_waiter_stylist"
+                android:background="#ffffff"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
- </RelativeLayout>
+            &lt;!&ndash;洗护师&ndash;&gt;
+            <TextView
+                android:id="@+id/tv_atvt_select_waiter_wash_hair"
+                android:text="洗护师"
+                android:textSize="@dimen/order_main_body_text_size"
+                android:padding="@dimen/dp_10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <ListView
+                android:id="@+id/lv_atvt_select_waiter_wash_hair"
+                android:background="#ffffff"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            &lt;!&ndash;烫染师&ndash;&gt;
+            <TextView
+                android:id="@+id/tv_atvt_select_waiter_perm_dye"
+                android:text="烫染师"
+                android:textSize="@dimen/order_main_body_text_size"
+                android:padding="@dimen/dp_10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <ListView
+                android:id="@+id/lv_atvt_select_waiter_perm_dye"
+                android:background="#ffffff"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+
+        </LinearLayout>
+    </ScrollView>-->
+    <ListView
+        android:id="@+id/lv_atvt_select_waiter_classify_content"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+    </ListView>
+
+    <!--确认转单-->
+    <TextView
+        android:id="@+id/tv_atvt_select_waiter_affirm_transfer_order"
+        android:gravity="center"
+        android:textSize="19sp"
+        android:textColor="#ffffff"
+        android:text="确认转单"
+        android:background="#aaaaaa"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_45" />
+</LinearLayout>
